--- a/index.html
+++ b/index.html
@@ -10,19 +10,13 @@
 <body class="vh-100 vw-100 overflow-hidden">
     <div class="container fluid p-3">
         <div class="row p-0">
-            <div class="col-2 nav-item h5">
-                <a class="nav-link active" aria-current="Home" href="#">Home</a>
+            <div class="col-10 nav-item h5 d-flex">
+                <a class="nav-link active mx-3" aria-current="Home" href="#">Home</a>
+                <a class="nav-link active mx-3" aria-current="Info" href="#">Info</a>
+                <a class="nav-link active mx-3" aria-current="Reservation" href="#">Reservation</a>
+                <a class="nav-link active mx-3" aria-current="location" href="#">location</a>
             </div>
-            <div class="col-2 nav-item h5">
-                <a class="nav-link active" aria-current="Info" href="#">Info</a>
-            </div>
-            <div class="col-2 nav-item h5">
-                <a class="nav-link active" aria-current="Reservation" href="#">Reservation</a>
-            </div>
-            <div class="col-2 nav-item h5">
-                <a class="nav-link active" aria-current="location" href="#">location</a>
-            </div>
-            <div class="col-4 h5 d-flex justify-content-right">
+            <div class="col-2 h5">
                 <a class="nav-link active text-dark" aria-current="Book Table" href="#">Book table</a>
             </div>
         </div>
